--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,8 @@
             </div>
         {% endif %}
 
+        {% include 'breadcrumb.html' %}
+
         {% block content %}
         {% endblock %}
     </main>
