--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Платформа психолога{% endblock %}</title>
     {% load static %}
+    <link rel="icon" type="image/svg+xml" href="{% static 'img/brain-solid-full.svg' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
         <nav>
             <div class="container">
-                <a href="/" class="logo">Платформа психолога</a>
+                <a href="/" class="logo">Кабинет психолога</a>
                 <div class="nav-center-links">
                     <div class="nav-dropdown">
                         <a href="{% url 'about' %}" class="nav-dropdown-toggle">
