--- a/templates/application_detail_student.html
+++ b/templates/application_detail_student.html
@@ -24,10 +24,7 @@
             <div class="application-info-item">
                 <strong>Психолог:</strong>
                 {% if application.psychologist %}
-                    {{ application.psychologist.username }}
-                    {% if application.psychologist.first_name or application.psychologist.last_name %}
-                        ({{ application.psychologist.first_name }} {{ application.psychologist.last_name }})
-                    {% endif %}
+                    {{ application.psychologist.get_display_name }}
                 {% else %}
                     Не назначен
                 {% endif %}
@@ -55,13 +52,7 @@
                 {% for consultation in consultations %}
                     <div class="consultation-card">
                         <div class="consultation-card-header">
-                            <strong>
-                                {% if consultation.psychologist.first_name or consultation.psychologist.last_name %}
-                                    {{ consultation.psychologist.first_name }} {{ consultation.psychologist.last_name }}
-                                {% else %}
-                                    {{ consultation.psychologist.username }}
-                                {% endif %}
-                            </strong>
+                            <strong>{{ consultation.psychologist.get_display_name }}</strong>
                             <span class="consultation-date">
                                 {{ consultation.created_at|date:"d.m.Y H:i" }}
                             </span>
